load("@rules_foreign_cc//foreign_cc:defs.bzl", "cmake")

package(default_visibility = ["//visibility:public"])

filegroup(
    name = "all_srcs",
    srcs = glob(
        ["**"],
        exclude = ["test/ci/*"],
    ),
    visibility = ["//visibility:public"],
)

config_setting(
    name = "opt_build",
    values = {"compilation_mode": "opt"},
)

config_setting(
    name = "dbg_build",
    values = {"compilation_mode": "dbg"},
)

config_setting(
    name = "fast_build",
    values = {"compilation_mode": "fastbuild"},
)

cmake(
    name = "base64",
    cache_entries = {
        "CMAKE_C_FLAGS": "-Wno-implicit-int-conversion -Wno-switch-default -Wno-implicit-fallthrough -Wno-missing-prototypes -Wno-unsafe-buffer-usage -Wno-cast-align -Wno-declaration-after-statement -Wno-undef -Wno-builtin-macro-redefined -Wno-cast-qual -Wno-shadow -Wno-sign-conversion -Wno-extra-semi-stmt -Wno-reserved-macro-identifier -Wno-shift-sign-overflow -Wno-uninitialized",
        "CMAKE_CXX_FLAGS": "-Wno-implicit-int-conversion -Wno-switch-default -Wno-implicit-fallthrough -Wno-missing-prototypes -Wno-unsafe-buffer-usage -Wno-cast-align -Wno-declaration-after-statement -Wno-undef -Wno-builtin-macro-redefined -Wno-cast-qual -Wno-shadow -Wno-sign-conversion -Wno-extra-semi-stmt -Wno-reserved-macro-identifier -Wno-shift-sign-overflow -Wno-uninitialized",
    },
    lib_source = ":all_srcs",
    out_static_libs = select({
        ":opt_build": [
        ],
        ":fast_build": [
        ],
        ":dbg_build": [
        ],
    }),
)
